@startuml db_class 

entity messages{
    message_id : int64
    __
    time : Time
    sourceID : int64
    groupID : int64
    content : string
}

entity contacts{
    userID1 : int64
    userID2 : int64
}

entity blocked{
    userID1 : int64
    userID2 : int64
}

entity usersToGroups{
    groupID : int64
    userID : int64
}

entity groups{
    groupID : int64
    __
    name : string
}

entity users{
    userID : int64
    __
    name : string
    password : string
    status : status
}

enum status {
    "online"
    "offline"
    "busy"
    "away"
}


messages "0..*" -- "1" users
messages "0..*" -- "1" groups

contacts "0..*" *-- "2" users
blocked "0..*" *-- "2" users
status "1" -- "0..*" users
usersToGroups "1..*" *-- "1" users
usersToGroups "1..*" *-- "1" groups

@enduml